manifests/poc-multitenancy/envoy.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: hyperfleet-local
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    http_filters:
                      - name: envoy.filters.http.ext_authz
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                          transport_api_version: V3
                          failure_mode_allow: false
                          grpc_service:
                            envoy_grpc:
                              cluster_name: authorino
                            timeout: 1s
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: local_route
                      request_headers_to_remove:
                        - x-hyperfleet-identity
                        - x-tenant-org
                        - x-tenant-project
                        - x-tenant-team
                        - x-tenant-user
                      virtual_hosts:
                        - name: upstream
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: /
                              route:
                                cluster: upstream
      clusters:
        - name: authorino
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: authorino
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: authorino-authorino-authorization.hyperfleet-local.svc.cluster.local
                          port_value: 50051
        - name: upstream
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: upstream
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: hyperfleet-api.hyperfleet-local.svc.cluster.local
                          port_value: 8000
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: hyperfleet-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.31-latest
          ports:
            - containerPort: 8000
            - containerPort: 9901
          volumeMounts:
            - name: config
              mountPath: /etc/envoy
              readOnly: true
          command:
            - envoy
            - -c
            - /etc/envoy/envoy.yaml
      volumes:
        - name: config
          configMap:
            name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: hyperfleet-local
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
